--- a/src/sass/layout/_l-Header.scss
+++ b/src/sass/layout/_l-Header.scss
@@ -45,6 +45,6 @@
 	cursor: pointer;
 
 	@include media("<=small"){
-		max-width: 60px;
+		max-width: 100px;
 	}
 }
